--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-datepicker": "^4.15.0",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "next": "^13.0.6",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.0",
     "uuid": "^9.0.0"
