--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.39.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
